welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (die1==die2 && noDoubles=true) {
                       ^withoutDoubles:4: error: reassignment to val
			die1=die1 +1
                            ^withoutDoubles:6: error: type mismatch;
 found   : Boolean
 required: Int
		else {die1==1}
                          ^